--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "orm": "^5.0.2",
     "request": "^2.88.0"
   },
   "devDependencies": {
