--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mysql": "^2.16.0",
+    "multer": "^1.4.1",
+    "mysql2": "^1.6.5",
     "orm": "^5.0.2",
-    "request": "^2.88.0"
+    "params": "^0.1.1",
+    "request": "^2.88.0",
+    "sequelize": "^4.42.0",
+    "strong-params": "^0.7.1"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
